<resources>
    <string name="app_name">mobilefinal</string>
    <string name="username">User ID</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register_new_ac">Register a new account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="please_fill_in">Please fill out this form</string>
    <string name="invalid_user_or_pwd">Invalid user or password</string>

    <string name="register_userId_error">User ID must be 6-12 characters in length</string>
    <string name="register_name_error">Name must contain one and only one space</string>
    <string name="register_age_error">Age must be between 10-80 inclusively</string>
    <string name="register_pwd_error">Password must be greater 6 characters in length</string>

    <string name="home_hello">Hello %s</string>
</resources>
